<resources>
    <string name="app_name">Rotaract</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_events">Events</string>
    <string name="nav_sponsors">Sponsors</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activities_title">
        <item>Home</item>
        <item>Events</item>
        <item>Sponsors</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Admin</item>
    </string-array>
    <string name="rupees_symbol">\u20B9</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recruitment">Recruitment</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="openDrawer">open_drawer</string>
</resources>
